--- a/index.html
+++ b/index.html
@@ -100,6 +100,67 @@
       </p>
     </div>
   </section>
+
+  <section class="popular-food">
+    <h2 class="popular-foods__title">
+      Popular Food / 人気
+    </h2>
+
+    <div class="popular-food__filters sushi__hide-scrollbar">
+      <button class="popular-food__filters-btn active">All</button>
+      <button class="popular-food__filters-btn">
+        <img src="/assets/sushi-9.png" alt="sushi9">Sushi
+      </button>
+      <button class="popular-food__filters-btn">
+        <img src="/assets/sushi-8.png" alt="Ramen">Ramen
+      </button>
+      <button class="popular-food__filters-btn">
+        <img src="/assets/sushi-7.png" alt="Udon">Udon
+      </button>
+      <button class="popular-food__filters-btn">
+        <img src="/assets/sushi-6.png" alt="Danggo">Danggo
+      </button>
+      <button class="popular-food__filters-btn">Other</button>
+    </div>
+    <div class="popular-food__catalogue">
+      <article class="popular-food__card">
+        <img src="/assets/sushi-12.png" alt="sushi12" class="popular-food__card-image">
+        <h4 class="popular-food__card-title">Chezu Sushi</h4>
+        <div class="popular-food__card-details flex-between">
+          <div class="popular-food__card-rating">
+            <img src="assets/star.svg" alt="star">
+            <p>4.9</p>
+          </div>
+          <p class="popular-food__card-price">$21.00</p>
+        </div>
+      </article>
+      <article class="popular-food__card active-card">
+        <img src="/assets/sushi-11.png" alt="sushi11" class="popular-food__card-image">
+        <h4 class="popular-food__card-title">Original Sushi</h4>
+        <div class="popular-food__card-details flex-between">
+          <div class="popular-food__card-rating">
+            <img src="assets/star.svg" alt="star">
+            <p>5.0</p>
+          </div>
+          <p class="popular-food__card-price">$19.00</p>
+        </div>
+      </article>
+      <article class="popular-food__card">
+        <img src="/assets/sushi-10.png" alt="sushi10" class="popular-food__card-image">
+        <h4 class="popular-food__card-title">Ramen Legendo</h4>
+        <div class="popular-food__card-details flex-between">
+          <div class="popular-food__card-rating">
+            <img src="assets/star.svg" alt="star">
+            <p>4.7</p>
+          </div>
+          <p class="popular-food__card-price">$13.00</p>
+        </div>
+      </article>
+    </div>
+    <button class="popular-foods__button">Explore Food
+      <img src="/assets/arrow-right.svg" alt="arrow-right">
+    </button>
+  </section>
   <script src="js/script.js"></script>
 </body>
 </html>
